# huron

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  __record___stable.csv  bash.sh  benchmark.sh  cachemiss.sh  cachemisses.txt  mine.py  postprocess.py  run_memory_usage.sh  secondPass.sh  sheriffMemoryUsage.sh  tensor_parallel.cpp  tensor_repeat.sh  unroll.md
AlignMalloc/: CMakeLists.txt
InstLoadStore/: CMakeLists.txt  InstLoadStore.cpp
Instrumenter/: Instrumenter.cpp
MemoryAnalysis/: CMakeLists.txt  MemoryAnalysis.cpp
RedirectPtr/: CMakeLists.txt  CallGraph.h  CustomUnrollLoop.cpp  CustomUnrollLoop.h  DynamicInst.h  GroupFuncLoop.cpp  GroupFuncLoop.h  RedirectPtr.cpp  UnrollLoopPass.h  Utils.cpp  Utils.h
experimental/postprocess/: Utils.h  main.cpp
histogram/: MapReduceScheduler.c  compile.sh
kmeans_repair/: kmeans.h  repair.cpp
linear_regression/: Makefile  linear_regression_pthread.c
llvm-passes/: CMakeLists.txt
llvm-passes/AlignMalloc/: AlignMalloc.cpp
llvm-passes/Instrumenter/: CMakeLists.txt  Instrumenter.cpp
llvm-passes/MallocDependent/: AndersenAA.cpp  CMakeLists.txt  MallocDependent.cpp
llvm-passes/MemoryAnalysis/: MemoryAnalysis.cpp
llvm-passes/RedirectPtr/: CMakeLists.txt  GroupFuncLoop.cpp  GroupFuncLoop.h  RedirectPtr.cpp  UnrollLoopPass.h  Utils.cpp  Utils.h
llvm-passes/include/: AndersenAA.h
lu_ncb/: compile.sh  lu.c
others/sheriff/: .gitignore
others/sheriff/examples/: Makefile
others/sheriff/include/: objecttable.h  xdefines.h  xpersist.h
others/sheriff/source/: gnuwrapper.cpp  libsheriff.cpp
others/tmi/: .gitignore  Makefile.am  README  autogen.sh  configure.ac
others/tmi/benchmarks/leveldb/: jld.mak  tmi-run-leveldb.mak
others/tmi/benchmarks/leveldb/db/: db_bench.cc  db_fs_bench.cc  db_test.cc
others/tmi/benchmarks/leveldb/include/leveldb/: env.h
others/tmi/benchmarks/leveldb/util/: env_posix.cc  env_test.cc
others/tmi/include/: Makefile.am  detector.hpp  funchook.h  hooks.hpp  internalmem.hpp  ll_list.h  pagestate.hpp  perf.hpp  timers.hpp  tmi.h  tmi_allocator.hpp  tmimem.hpp  tmithread.hpp  tmiutil.hpp  tramps.h
others/tmi/include/detector/: CategoryCounter.h  DataAccess.h  FSD.h  Helpers.h  HotSpotWindow.h  MemRangeBucket.h  PCCounterComparer.h  SharingEventType.h  laser_api.h
others/tmi/llvm/lib/Transforms/TMI/: CMakeLists.txt  TMI.cpp
others/tmi/src/: Makefile.am  detector.cpp  funchook.c  hooks.cpp  internalmem.cpp  libtmi.cpp  ll_alloc.c  ll_alloc_original.c  llalloc.cpp  perf.cpp  timers.cpp  tmialloc.cpp  tmidetector.cpp  tmildr.cpp  tmilib.cpp  tmimem.cpp  tmisync.cpp  tmithread.cpp  tmiutil.cpp
others/tmi/tests/: test.cpp  test_fork.cpp  test_locks.cpp  test_sync.cpp  test_sync_process.cpp
others/tmi/unittests/: Makefile.am  hooksuite.cpp  memorysuite.cpp  syncsuite.cpp
others/tmi/xed/: makefile  mem-insn-disassembler.c  xed-disas-elf.cpp  xed-disas-hex.cpp  xed-disas-macho.cpp  xed-disas-pecoff.cpp  xed-disas-raw.cpp  xed-dot-prep.c  xed-dot-prep.h  xed-examples-util.h  xed.cpp
others/tmi/xed/include/: xed-build-defines.h  xed-decoded-inst-api.h
perf/: CMakeLists.txt  LoggingThread.cpp  LoggingThread.h  Perf.cpp  Perf.h  ProcMaps.cpp  ProcMaps.h  Runtime.cpp  Segment.h  xthread.h
postprocess/: CMakeLists.txt  Detect.cpp  Detect.h  Layout.h  Makefile  Repair.cpp  Repair.h  Stats.h  Utils.cpp  Utils.h  main.cpp  mallocRuntimeIDs.txt  run.sh  time_exp.py
repair/: address_translation_table.txt  compile.sh  kmeans.h  pc_address.py  repair.cpp  repair_bitmap.cpp  toy.cpp
runtime/: CMakeLists.txt  CacheLine.cpp  CacheLine.h  CustomAllocator.h  GetGlobal.h  LibFuncs.h  LoggingThread.cpp  LoggingThread.h  Makefile  MallocInfo.h  MemArith.h  Runtime.cpp  SecondPass.cpp  Segment.h  SharedSpinLock.h  SymbolCache.h  xthread.h
scripts/: our_cache_hit_rate.py  parse_perf_drop_sigv.py  run_memory_usage.sh  src_line_to_pcs.py
scripts/src_line_to_pcs/: main.py
second_pass/: GetGlobal.h  Makefile  SecondPass.cpp  xthread.h
test_suites/atomic_lock/: sequential.cpp  spinlock.h
test_suites/boost_test/: spinlock.hpp  spinlock_pool.cpp  spinlock_pool.hpp  spinlock_pool_manual.cpp  spinlock_pool_manual.hpp
test_suites/contribution/: clean.sh  compile.sh  compile_product_pass.sh  compile_profile_pass.sh  head.sh  run.sh  run_original.sh  run_sheriff.sh  stddev.sh  toy.c
test_suites/false/: Makefile  false.c  false_unrolling.c
test_suites/histogram/: Makefile  MapReduceScheduler.c  hist-pthread-manual.c  hist-pthread.c
test_suites/histogram_input/: hist-pthread.c
test_suites/linear_regression/: address_translation_table.txt  compile.sh  linear_regression_pthread.c  linear_regression_pthread_manual.c  lreg
test_suites/locked/: toy.c  toy_manual.c
test_suites/lockless/: toy.c  toy_manual.c
test_suites/lu_ncb/: lu.c  lu_manual.c
test_suites/string_match/: string_match_pthreads.c  string_match_pthreads_manual.c
test_suites/tensor/: benchmark.sh
test_suites/tmi_boost/ref_count/: shared_ptr_fs.cpp
test_suites/tmi_boost/spinlock/: stackoverflow.cpp
