cmake_minimum_required(VERSION 3.9)
set(CMAKE_CXX_STANDARD 11)

project(runtime VERSION 0.1.0 DESCRIPTION "runtime dyn library for profiling")
set(SOURCE_FILES LoggingThread.cpp Runtime.cpp LoggingThread.h GetGlobal.h xthread.h MemArith.h MallocInfo.h Segment.h)
add_library(runtime SHARED ${SOURCE_FILES})
target_link_libraries(runtime dl pthread)
set(CMAKE_CXX_FLAGS "-Wall -Wextra -DDEBUG -fPIC")
set(CMAKE_CXX_FLAGS_DEBUG "-g")
set(CMAKE_CXX_FLAGS_RELEASE "-O3 -g")
